# melke-fidelat-bot

./: bot.py  pyproject.toml  requirements.txt
